--- a/predikat.ipynb
+++ b/predikat.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNq/PBTHW1o3TVhYmdjYYZc",
+      "authorship_tag": "ABX9TyPDXDYqrqHJx9SaLDIuaDvZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -704,6 +704,25 @@
         "id": "k14zq9BI0bgS"
       },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_predikat(ipk):\n",
+        "    if ipk >= 3.5:\n",
+        "        return 'Sangat Baik'\n",
+        "    elif 3.0 <= ipk < 3.5:\n",
+        "        return 'Baik'\n",
+        "    elif 2.5 <= ipk < 3.0:\n",
+        "        return 'Cukup'\n",
+        "    else:\n",
+        "        return 'Kurang'\n"
+      ],
+      "metadata": {
+        "id": "nikmSucOUwLa"
+      },
+      "execution_count": 79,
       "outputs": []
     }
   ]
